--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
       </div>
     </div>
 
+    <div class="footer">Guess That Letter!</div>
     <script src="assets/javascript/game.js"></script>
   </body>
 </html>
