added giphy img conditional

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </section>
     <div class="container">
       <div class="row border m-3">
-        <div class="col-sm-7 pt-3">
+        <div class="col-sm pt-3">
           <h2>Here's The Test</h2>
           <h4>The Rules:</h4>
           <p class="lead">
@@ -30,7 +30,7 @@
 
           <p class="text-muted">(To restart game and score, refresh page.</p>
         </div>
-        <div class="col-sm-5">
+        <div class="col-sm">
           <img
             id="fresh-gif"
             width="100%"
