updated js and html file

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <h1>Guess That Letter!</h1>
     </section>
     <div class="container">
-      <div class="row border m-3">
+      <!-- <div class="row border m-3">
         <div class="col-sm pt-3">
           <h2>Here's The Test</h2>
           <h4>The Rules:</h4>
@@ -80,7 +80,7 @@
             </tbody>
           </table>
         </div>
-      </div>
+      </div> -->
     </div>
 
     <div class="footer">Guess That Letter!</div>
